tests/smoothy/iter/snapshots/smoothy__iter__contains_only__fails_when_actual_contains_additional_values.snap
---
source: tests/smoothy/iter/contains_only.rs
expression: assertion_failed_output
---
[31mAssertion failed![0m

Expected
  [31m[1, 2, 2, 1, 3, 3][0m
to contain only
  [1, 2]
but found extra items
  [32m[2, 1, 3, 3][0m
