tests/smoothy/iter/snapshots/smoothy__iter__contains_only__fails_when_expected_contains_additional_duplicated_values.snap
---
source: tests/smoothy/iter/contains_only.rs
expression: assertion_failed_output
---
[31mAssertion failed![0m

Expected
  [31m[1, 2][0m
to contain only
  [1, 1, 2]
but did not contain
  [32m[1][0m
